--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,9 @@ plugins:
 AllCops:
   TargetRubyVersion: 3.1
 
+Layout/LineLength:
+  Max: 150
+
 Style/StringLiterals:
   EnforcedStyle: double_quotes
 
