--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -24,8 +24,10 @@ jobs:
         mkdir -p $HOME/.gem
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
-        printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+        printf -- "---\n:github: Bearer ${{secrets.GITHUB_TOKEN}}\n" > $HOME/.gem/credentials
         gem build propertree*.gemspec
         gem push --KEY github --host https://rubygems.pkg.github.com/estraph propertree*.gem
-      env:
-        GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
+    - name: Install and run the gem
+      run: |
+        gem install propertree -s "https://github:${{secrets.GITHUB_TOKEN}}rubygems.pkg.github.com/estraph"
+        bundle exec calculate_averages -v
