add missing "@" to source in smoke test command

--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -29,5 +29,5 @@ jobs:
         gem push --KEY github --host https://rubygems.pkg.github.com/estraph propertree*.gem
     - name: Install and run the gem
       run: |
-        gem install propertree -s "https://github:${{secrets.GITHUB_TOKEN}}rubygems.pkg.github.com/estraph"
+        gem install propertree -s https://github:${{secrets.GITHUB_TOKEN}}@rubygems.pkg.github.com/estraph
         bundle exec calculate_averages -v
